gcc/testsuite/gdc.dg/driver_fonly1.d
// { dg-additional-options "-fonly=not-a-file" }
// { dg-error "argument is different from first input file name" "" { target *-*-* } 0 }
